--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -73,3 +73,25 @@ pre.mermaid-container, pre[class*="language-"].mermaid-container
 .yuu-theme-dark
   pre.mermaid-container, pre[class*="language-"].mermaid-container
     background: #fff;
+
+.sample-form
+  label
+    display block
+    margin 10px 0 5px
+  input[type=text], input[type=password]
+    box-sizing border-box
+    padding 10px
+    border 1px solid #aaa
+    border-radius 3px
+    width 500px
+    max-width 100%
+  input[type=submit]
+    margin 20px 0 10px
+    padding 10px
+    width 500px
+    max-width 100%
+    font-weight bold
+  div[role=info]
+    margin-top 3px
+    font-size 14px
+    color #777
