--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -95,3 +95,10 @@ pre.mermaid-container, pre[class*="language-"].mermaid-container
     margin-top 3px
     font-size 14px
     color #777
+  textarea
+    box-sizing border-box
+    padding 10px
+    border 1px solid #aaa
+    border-radius 3px
+    width 500px
+    max-width 100%
